maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:48: error: not found: value d
                          {avance;return(d)};
                                         ^